--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>Futbol Internacional</title>
+        <title>Final Proyect</title>
     </head>
 
     <body>
         <!--h1 se utiliza para titularse-->
-        <h1>Futbol Español</h1>
+        <h1>Black Mirror</h1>
         <p>
             Theo Hernández, defensa del Alavés que lesionó de gravedad
             en una entrada fortuita al lateral del Barcelona Aleix Vidal, pidió "perdón"
