--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             final de la Copa del Rey.</blockquote>
             <cite>http://www.futbolred.com</cite>
 
-       </p>
+       <p>
 
        
-     </body>
-</html>
+     <body>
+<html>
