--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
         <!--h1 se utiliza para titularse-->
         <h1>Black Mirror</h1>
         <p>
-            Theo Hernández, defensa del Alavés que lesionó de gravedad
-            en una entrada fortuita al lateral del Barcelona Aleix Vidal, pidió "perdón"
-            por esa acción, pero dejó claro que no tuvo
-            intención de hacer daño al jugador del equipo azulgrana.
+            Should we have an opinion, a belief or knowledge about limits of technology? Why?
+            
         </p>
         <hr/>
         <h2>Esto dijo el jugador Hernandez</h2>
@@ -25,7 +23,6 @@
             <cite>http://www.futbolred.com</cite>
 
        <p>
-
        
-     <body>
-<html>
+     </body>
+</html>
